--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,8 @@
     <center>
         <br />
         <div style="font-weight: 800; font-size: 60px;">
-            <span>IALP</span>
+            <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
+            <span style="margin-right: 5%;">IALP</span>
         </div>
         <div>
             <button id="connectButton"" onclick=" login()">Connect</button>
