--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 <main>
     <center>
         <br />
-        <div style="font-weight: 800; font-size: 60px;">
+        <div style="font-weight: 800; font-size: 60px; margin-right: 8%;">
             <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
-            <span style="margin-right: 5%;">IALP</span>
+            <span>IALP</span>
         </div>
         <div>
             <button id="connectButton"" onclick=" login()">Connect</button>
