--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,11 +32,12 @@
         </div>
         <br />
 
-        <p style="font-size: medium;">Made with <span>&#10084; | </span>
+        <p style="font-size: large;">Made with <span>&#10084; | </span>
             <i class="fab fa-twitter fa-fw"></i>
             <i class="fab fa-telegram fa-fw"></i>
             <i class="fab fa-reddit fa-fw"></i>
             <i class="fab fa-facebook fa-fw"></i>
+            <i class="fab fa-discord fa-fw"></i>
         </p>
         <br />
         <script>
