--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,9 @@
 <%- include('../views/partials/header'); %>
 <main>
     <center>
-        <br />
         <div style="font-weight: 800; font-size: 60px; ">
-            <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
-            <span style="margin-right: 8%;">IALP</span>
+            <img class="image-blurred-edge" src="/uploads/ialpTitleLogo.png">
+            <!-- <span style="margin-right: 8%;">IALP</span> -->
         </div>
         <div>
             <button id="connectButton"" onclick=" login()">Connect</button>
