--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
 <%- include('../views/partials/header'); %>
 <main>
     <center>
-        <div style="font-weight: 800; font-size: 60px; ">
-            <img class="image-blurred-edge" src="/uploads/ialpTitleLogo.png">
-            <!-- <span style="margin-right: 8%;">IALP</span> -->
+        <div style="font-weight: 500; font-size: 46px; ">
+            <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
+            <span>IALP Icy Alp</span>
         </div>
         <div>
             <button id="connectButton"" onclick=" login()">Connect</button>
