--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 html {
-    min-height:100%;
+    min-height: 100%;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 
 .image-blurred-edge {
     border-radius: 10%;
-    width: 520px;
-    height: 130px;
-    margin-top: 5px;
+    width: 95px;
+    height: 95px;
+    opacity: 0.7;
 }
