--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <center>
         <div style="font-weight: 500; font-size: 46px; ">
             <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
-            <span>IALP Icy Alp</span>
+            <span>IALP</span>
         </div>
         <div>
             <button id="connectButton"" onclick=" login()">Connect</button>
