--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,12 +31,13 @@
         </div>
         <br />
 
-        <p style="font-size: large;">Made with <span>&#10084; | </span>
+        <p>Made with <span style="font-size: large">&#10084; |
             <i class="fab fa-twitter fa-fw"></i>
             <i class="fab fa-telegram fa-fw"></i>
             <i class="fab fa-reddit fa-fw"></i>
             <i class="fab fa-facebook fa-fw"></i>
             <i class="fab fa-discord fa-fw"></i>
+        </span>
         </p>
         <br />
         <script>
