--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,65 +1,99 @@
 <%- include('../views/partials/header'); %>
 <main>
     <center>
-        <div style="font-weight: 500; font-size: 46px; ">
-            <img class="image-blurred-edge" src="/uploads/ialpLogo.png">
-            <span>IALP</span>
-        </div>
-        <div>
-            <button id="connectButton"" onclick=" login()">Connect</button>
-            <span id="ethAddress"></span>
-        </div>
-        <p></p>
-        <img style="height: 20px; width: 20px;" src="/uploads/Quickswap.png">
-        <a href="https://quickswap.exchange">
-            Buy on QuickSwap</a>
-        <p></p>
-        <p>Contract: 0xA12c0CB570540B830f12a8e3579F999e93A73Aa2</p>
-        <p></p>
-        <div style="width: 400px;">
-            <h4>ICY ALP:</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        </div>
-        <br />
-        <h4>Tokenomics:</h4>
         <p></p>
         <div>
-            <p>- Total Supply ...</p>
-            <p>- Initial Supply ...</p>
-            <p>- Burn ...</p>
-            <p>- Reflection ...</p>
+            <h3>Monthly Summary: </h3>
+            <table class="tableLoan" style="width:90%">
+                <thead>
+                    <tr>
+                        <th style="width: 20%;"></th>
+                        <th>Sum</th>
+                        <th>Avg</th>
+                        <th>Median</th>
+                        <th>Min</th>
+                        <th>Max</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Loan Amount Summary</td>
+                        <td><%= num(JSON.stringify(monthlySummary.LoanAmountSummary.Sum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.LoanAmountSummary.Average)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.LoanAmountSummary.Median)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.LoanAmountSummary.Minimum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.LoanAmountSummary.Maximum)).format('$0,0.00') %></td>
+                    </tr>
+                    <tr>
+                        <td>Subject Appraised Amount Summary: </td>
+                        <td><%= num(JSON.stringify(monthlySummary.SubjectAppraisedAmountSummary.Sum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.SubjectAppraisedAmountSummary.Average)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.SubjectAppraisedAmountSummary.Median)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.SubjectAppraisedAmountSummary.Minimum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.SubjectAppraisedAmountSummary.Maximum)).format('$0,0.00') %></td>
+                    </tr>
+                    <tr>
+                        <td>Interest Rate Summary</td>
+                        <td><%= num(JSON.stringify(monthlySummary.InterestRateSummary.Sum)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.InterestRateSummary.Average)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.InterestRateSummary.Median)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.InterestRateSummary.Minimum)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummary.InterestRateSummary.Maximum)).format('0.00') %></td>
+                    </tr>
+                </tbody>
+            </table>            
         </div>
         <br />
-
-        <p>Made with <span style="font-size: large">&#10084; |
-            <i class="fab fa-twitter fa-fw"></i>
-            <i class="fab fa-telegram fa-fw"></i>
-            <i class="fab fa-reddit fa-fw"></i>
-            <i class="fab fa-facebook fa-fw"></i>
-            <i class="fab fa-discord fa-fw"></i>
-        </span>
-        </p>
-        <br />
-        <script>
-            Moralis.initialize("dUMJfv2n7gRdbxFXXA2GOzOBJZCIh8BIA1i5sGUO");
-            Moralis.serverURL = 'https://8k58x9n5vu6p.moralis.io:2053/server';
-
-            document.getElementById("ethAddress").style.display = "none";
-            document.getElementById("connectButton").style.display = "block";
-
-            async function login() {
-                var user = await Moralis.Web3.authenticate();
-                if (user) {
-                    const user = Moralis.User.current();
-                    const userAddress = user.get('ethAddress');
-                    document.getElementById("ethAddress").style.display = "block";
-                    document.getElementById("ethAddress").innerHTML = 'Connected: ' + userAddress;
-                    document.getElementById("connectButton").style.display = "none";
-                    console.log(user);
-                    alert('connected!');
-                }
-            }
-        </script>
+        <div>
+            <h3>Monthly Summary by Sate:</h3>
+            <% for (var i = 0; i < monthlySummaryByState.length; i++) { %>
+            <p></p>
+            <p><strong><%= monthlySummaryByState[i].SubjectState %></strong></p>
+            <table class="tableLoan" style="width:90%">
+                <thead>
+                    <tr>
+                        <th style="width: 20%;"></th>
+                        <th>Sum</th>
+                        <th>Avg</th>
+                        <th>Median</th>
+                        <th>Min</th>
+                        <th>Max</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Loan Amount Summary</td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].LoanAmountSummary.Sum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].LoanAmountSummary.Average)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].LoanAmountSummary.Median)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].LoanAmountSummary.Minimum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].LoanAmountSummary.Maximum)).format('$0,0.00') %></td>
+                    </tr>
+                    <tr>
+                        <td>Subject Appraised Amount Summary: </td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].SubjectAppraisedAmountSummary.Sum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].SubjectAppraisedAmountSummary.Average)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].SubjectAppraisedAmountSummary.Median)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].SubjectAppraisedAmountSummary.Minimum)).format('$0,0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].SubjectAppraisedAmountSummary.Maximum)).format('$0,0.00') %></td>
+                    </tr>
+                    <tr>
+                        <td>Interest Rate Summary</td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].InterestRateSummary.Sum)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].InterestRateSummary.Average)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].InterestRateSummary.Median)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].InterestRateSummary.Minimum)).format('0.00') %></td>
+                        <td><%= num(JSON.stringify(monthlySummaryByState[i].InterestRateSummary.Maximum)).format('0.00') %></td>
+                    </tr>
+                </tbody>
+            </table>
+            <% } %>
+        </div>
     </center>
+    <script>
+        $(document).ready(function() {
+            $('#example').DataTable();
+        } );
+    </script>
 </main>
 <%- include('../views/partials/footer'); %>
