--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,15 +3,31 @@ html {
 }
 
 body {
-    background: linear-gradient(0deg, #14212b 0%, rgb(0, 8, 24) 100%);
+    background: linear-gradient(0deg, #000000 0%, rgb(0, 8, 24) 100%);
     font-family: 'Source Code Pro', monospace;
     color: white;
     font-size: 14px;
 }
 
-.image-blurred-edge {
-    border-radius: 10%;
-    width: 95px;
-    height: 95px;
-    opacity: 0.7;
-}
+.tableLoan {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .tableLoan td, th {
+    border: 1px solid #ddd;
+    padding: 2px;
+  }
+  
+  .tableLoan tr:nth-child(even){background-color: #00000f;}
+  
+  .tableLoan tr:hover {background-color: rgb(0, 0, 0);}
+  
+  .tableLoan th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #030111;
+    color: white;
+  }
