--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,10 +22,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
-	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-	<script src="https://unpkg.com/moralis@0.0.6/dist/moralis.js"></script>
-
-	<title>IALP</title>
+	<title>Loans</title>
 </head>
 
 <body>
