--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,13 @@
 <%- include('../views/partials/header'); %>
 <main>
     <center>
-        <p></p>
+        <div style="float: right; padding: 10px;">
+            <a href="/monthlySummaryJSON">JSON monthlySummary</a>
+            <a href="/monthlySummaryByStateJSON">JSON monthlySummaryByState</a>
+        </div>
+        <br />
+        <br />
+        <br />
         <div>
             <h3>Monthly Summary: </h3>
             <table class="tableLoan" style="width:90%">
